Add `Add-Opens` entry to `MANIFEST.MF`