@@ -182,6 +182,7 @@ THE SOFTWARE.
               <mainClass>Main</mainClass>
             </manifest>
             <manifestEntries>
+              <Add-Opens>java.base/java.lang java.base/java.io java.base/java.util java.base/java.util.concurrent</Add-Opens>
               <Implementation-Version>${project.version}</Implementation-Version>
               <Hudson-Version>1.395</Hudson-Version>
               <Jenkins-Version>${project.version}</Jenkins-Version>
